# searchex

./: CMakeLists.txt  LICENSE  README.md  app.py  pyproject.toml
src/cpp/: cpp.cpp
src/texploder/: __init__.py
