[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11[global]>=2.12",
  "cmake>=3.27",
  "ninja>=1.11",
  "build>=1.2"
]
build-backend = "scikit_build_core.build"

[project]
name = "searchex"
version = "0.2.0"
description = "PySide6 UI + pybind11 C++ extension for fast recursive search (incl. binary files)."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "You", email = "you@example.com" }]
license = { text = "MIT" }
dependencies = [
  "PySide6>=6.7"
]

[tool.scikit-build]
minimum-version = "0.10"
wheel.packages = ["src/searchex"]
# cmake.verbose = true   # optional for debugging
